force-app/main/default/objects/Estimate_Request__c/Estimate_Request__c.object-meta.xml
<CustomObject>
    <label>Estimate</label>
    <nameField>
        <label>Estimate Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>