force-app/main/default/objects/Estimate_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Account for this Estimate Request</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Estimates</relationshipLabel>
    <relationshipName>Estimate_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>