force-app/main/default/objects/Estimate_Request__c/fields/Acct_Name__c.field-meta.xml
<CustomField>
    <fullName>Acct_Name__c</fullName>
    <externalId>true</externalId>
    <label>Acct Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>