force-app/main/default/objects/Estimate_Request__c/fields/Additional_Sizes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Sizes__c</fullName>
    <description>Used for apparel estimating</description>
    <label>Additional Sizes</label>
    <type>TextArea</type>
</CustomField>