force-app/main/default/objects/Estimate_Request__c/fields/Adhesive__c.field-meta.xml
<CustomField>
    <fullName>Adhesive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adhesive</label>
    <type>Checkbox</type>
</CustomField>