force-app/main/default/objects/Estimate_Request__c/fields/Adhesive_Type__c.field-meta.xml
<CustomField>
    <fullName>Adhesive_Type__c</fullName>
    <label>Adhesive Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Temperature</fullName>
            </value>
            <value>
                <fullName>High Tack</fullName>
            </value>
            <value>
                <fullName>Opaque</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
                <default>true</default>
                <label>Permanent</label>
            </value>
            <value>
                <fullName>Removable</fullName>
            </value>
            <value>
                <fullName>Repositionable</fullName>
            </value>
            <value>
                <fullName>Freezer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>