force-app/main/default/objects/Estimate_Request__c/fields/Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Annual_Usage__c</fullName>
    <label>Annual Usage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>