force-app/main/default/objects/Estimate_Request__c/fields/Application_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Application_Exposure__c</fullName>
    <label>What will labels be exposed to?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>