force-app/main/default/objects/Estimate_Request__c/fields/Application_Method__c.field-meta.xml
<CustomField>
    <fullName>Application_Method__c</fullName>
    <label>Application Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Machine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>