force-app/main/default/objects/Estimate_Request__c/fields/Application_Surface__c.field-meta.xml
<CustomField>
    <fullName>Application_Surface__c</fullName>
    <label>What will labels be applied to?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>