force-app/main/default/objects/Estimate_Request__c/fields/Application_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Application_Temperature__c</fullName>
    <label>Temperature at application?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>