force-app/main/default/objects/Estimate_Request__c/fields/Approval_Process_Notification__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Notification__c</fullName>
    <label>Approval Process Notification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L&amp;P Estimating Approval Complete</fullName>
            </value>
            <value>
                <fullName>L&amp;P Management Approval Complete</fullName>
            </value>
            <value>
                <fullName>CP 1 Estimating Approval Complete</fullName>
            </value>
            <value>
                <fullName>CP 2 Estimating Approval Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>