force-app/main/default/objects/Estimate_Request__c/fields/Art_Description__c.field-meta.xml
<CustomField>
    <fullName>Art_Description__c</fullName>
    <label>Art Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>