force-app/main/default/objects/Estimate_Request__c/fields/ArtProvided__c.field-meta.xml
<CustomField>
    <fullName>ArtProvided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Art will be provided?</label>
    <type>Checkbox</type>
</CustomField>