force-app/main/default/objects/Estimate_Request__c/fields/Auto_Applied__c.field-meta.xml
<CustomField>
    <fullName>Auto_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if label will be Auto Applied</inlineHelpText>
    <label>Auto Applied</label>
    <type>Checkbox</type>
</CustomField>