force-app/main/default/objects/Estimate_Request__c/fields/Avg_Qty__c.field-meta.xml
<CustomField>
    <fullName>Avg_Qty__c</fullName>
    <label>Avg Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>