force-app/main/default/objects/Estimate_Request__c/fields/Back__c.field-meta.xml
<CustomField>
    <fullName>Back__c</fullName>
    <defaultValue>&quot;TBD&quot;</defaultValue>
    <label>Back Roll Wind</label>
    <length>5</length>
    <type>Text</type>
</CustomField>