force-app/main/default/objects/Estimate_Request__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <label>Barcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>