force-app/main/default/objects/Estimate_Request__c/fields/Barcode_Number__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Number__c</fullName>
    <description>Field &quot;Barcode__c&quot; formats with commas. This field converts to text so show with no commas.</description>
    <label>Barcode #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>