force-app/main/default/objects/Estimate_Request__c/fields/Base_Material_Other__c.field-meta.xml
<CustomField>
    <fullName>Base_Material_Other__c</fullName>
    <label>Base Material Other</label>
    <length>25</length>
    <type>Text</type>
</CustomField>