force-app/main/default/objects/Estimate_Request__c/fields/Beat_Date_Expectation_by__c.field-meta.xml
<CustomField>
    <fullName>Beat_Date_Expectation_by__c</fullName>
    <formula>Returned_Date__c  - Need_by_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Date Expectation by</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>