force-app/main/default/objects/Estimate_Request__c/fields/Bind__c.field-meta.xml
<CustomField>
    <fullName>Bind__c</fullName>
    <label>Bind</label>
    <type>Date</type>
</CustomField>