force-app/main/default/objects/Estimate_Request__c/fields/Bindery__c.field-meta.xml
<CustomField>
    <fullName>Bindery__c</fullName>
    <label>Bindery</label>
    <type>TextArea</type>
</CustomField>