force-app/main/default/objects/Estimate_Request__c/fields/Bleeds__c.field-meta.xml
<CustomField>
    <fullName>Bleeds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bleeds</label>
    <type>Checkbox</type>
</CustomField>