force-app/main/default/objects/Estimate_Request__c/fields/Board_Type__c.field-meta.xml
<CustomField>
    <fullName>Board_Type__c</fullName>
    <label>Board Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SBS C1S</fullName>
            </value>
            <value>
                <fullName>SBS C2S</fullName>
            </value>
            <value>
                <fullName>SUS</fullName>
            </value>
            <value>
                <fullName>CRB</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>