force-app/main/default/objects/Estimate_Request__c/fields/Buried_Add_in__c.field-meta.xml
<CustomField>
    <fullName>Buried_Add_in__c</fullName>
    <description>Additional Add on Costs that will be added to the total price</description>
    <label>Buried Add-On Qty 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>