force-app/main/default/objects/Estimate_Request__c/fields/Buried_Add_On_Qty_2__c.field-meta.xml
<CustomField>
    <fullName>Buried_Add_On_Qty_2__c</fullName>
    <label>Buried Add-On Qty 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>