force-app/main/default/objects/Estimate_Request__c/fields/Bus_Unit__c.field-meta.xml
<CustomField>
    <fullName>Bus_Unit__c</fullName>
    <defaultValue>IF($RecordType.Name = &quot;CP - RFE 3 Components&quot;,&quot;Commercial Print&quot;, 
IF ($RecordType.Name = &quot;CP - RFE Short Form&quot;, &quot;Commercial Print&quot;,
IF ($RecordType.Name = &quot;Commercial Print&quot;, &quot;Commercial Print&quot;,
IF ($RecordType.Name = &quot;Custom Label Estimate&quot;, &quot;Labels&quot;,
IF ($RecordType.Name = &quot;Nashua Coated Estimate&quot;, &quot;Nashua&quot;, 
IF ($RecordType.Name = &quot;POS Estimate&quot;, &quot;Nashua&quot;, 
IF ($RecordType.Name = &quot;Packaging Estimate&quot;, &quot;Packaging&quot;,
IF ($RecordType.Name = &quot;Rx Label&quot;, &quot;Labels&quot;,
IF ($RecordType.Name = &quot;Sleeve Estimate&quot;, &quot;Packaging&quot;, 
IF ($RecordType.Name = &quot;Nashua/Rx Label Estimate&quot;, &quot;Nashua&quot;,
IF ($RecordType.Name = &quot;Default Estimate&quot;, &quot;Packaging&quot;,
NULL)))))))))))</defaultValue>
    <description>Calculated field to capture the Business Unit that the RFE is being created for.</description>
    <externalId>true</externalId>
    <label>Bus Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>