force-app/main/default/objects/Estimate_Request__c/fields/Bus_Units__c.field-meta.xml
<CustomField>
    <fullName>Bus_Units__c</fullName>
    <description>Calculated field to capture the Business Unit that the RFE is being created for.</description>
    <label>Bus Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>