force-app/main/default/objects/Estimate_Request__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Name of Business Unit</description>
    <inlineHelpText>Select the Business Unit that this Estimate is related to.</inlineHelpText>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Print</fullName>
            </value>
            <value>
                <fullName>Envelope</fullName>
            </value>
            <value>
                <fullName>Labels</fullName>
            </value>
            <value>
                <fullName>Nashua Coated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Shrink Sleeve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>