force-app/main/default/objects/Estimate_Request__c/fields/Caliper__c.field-meta.xml
<CustomField>
    <fullName>Caliper__c</fullName>
    <label>Caliper</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>