force-app/main/default/objects/Estimate_Request__c/fields/Case_Pack__c.field-meta.xml
<CustomField>
    <fullName>Case_Pack__c</fullName>
    <label>Case Pack</label>
    <length>20</length>
    <type>Text</type>
</CustomField>