force-app/main/default/objects/Estimate_Request__c/fields/Cold_Foil__c.field-meta.xml
<CustomField>
    <fullName>Cold_Foil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cold Foil</label>
    <type>Checkbox</type>
</CustomField>