force-app/main/default/objects/Estimate_Request__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>