force-app/main/default/objects/Estimate_Request__c/fields/Component_Description_2__c.field-meta.xml
<CustomField>
    <fullName>Component_Description_2__c</fullName>
    <label>Component Description 2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>