force-app/main/default/objects/Estimate_Request__c/fields/Component_Description__c.field-meta.xml
<CustomField>
    <fullName>Component_Description__c</fullName>
    <inlineHelpText>If you have a component - then a description is required. Else none of the paper, ink etc will print on the output documents.</inlineHelpText>
    <label>Component Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>