force-app/main/default/objects/Estimate_Request__c/fields/Consecutive_Numbering__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Numbering__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if label needs to be consecutively numbered</inlineHelpText>
    <label>Consecutive Numbering</label>
    <type>Checkbox</type>
</CustomField>