force-app/main/default/objects/Estimate_Request__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Email</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Estimates (Contact Email)</relationshipLabel>
    <relationshipName>Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>