force-app/main/default/objects/Estimate_Request__c/fields/Container_Color__c.field-meta.xml
<CustomField>
    <fullName>Container_Color__c</fullName>
    <label>Container Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>