force-app/main/default/objects/Estimate_Request__c/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <label>Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Can</fullName>
            </value>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>PET</fullName>
            </value>
            <value>
                <fullName>HDPE</fullName>
            </value>
            <value>
                <fullName>LDPE</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>