force-app/main/default/objects/Estimate_Request__c/fields/Core_ID_Label__c.field-meta.xml
<CustomField>
    <fullName>Core_ID_Label__c</fullName>
    <label>Core ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>