force-app/main/default/objects/Estimate_Request__c/fields/Core_OD__c.field-meta.xml
<CustomField>
    <fullName>Core_OD__c</fullName>
    <label>Core OD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>