force-app/main/default/objects/Estimate_Request__c/fields/Core_Size__c.field-meta.xml
<CustomField>
    <fullName>Core_Size__c</fullName>
    <label>Core Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1&quot;</fullName>
            </value>
            <value>
                <fullName>3&quot;</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>