force-app/main/default/objects/Estimate_Request__c/fields/Core_Size_Other__c.field-meta.xml
<CustomField>
    <fullName>Core_Size_Other__c</fullName>
    <label>Core Size Other</label>
    <length>25</length>
    <type>Text</type>
</CustomField>