force-app/main/default/objects/Estimate_Request__c/fields/Core_Type__c.field-meta.xml
<CustomField>
    <fullName>Core_Type__c</fullName>
    <label>Core Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>