force-app/main/default/objects/Estimate_Request__c/fields/Corner_Radius__c.field-meta.xml
<CustomField>
    <fullName>Corner_Radius__c</fullName>
    <defaultValue>0.1250</defaultValue>
    <inlineHelpText>*Req&apos;d if machine applied. Standard Corner Radius is 1/8&quot; or 0.125</inlineHelpText>
    <label>Corner Radius</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>