force-app/main/default/objects/Estimate_Request__c/fields/Cost_10__c.field-meta.xml
<CustomField>
    <fullName>Cost_10__c</fullName>
    <label>Cost 10</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>