force-app/main/default/objects/Estimate_Request__c/fields/Cost_1__c.field-meta.xml
<CustomField>
    <fullName>Cost_1__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Cost 1</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>