force-app/main/default/objects/Estimate_Request__c/fields/Costs__c.field-meta.xml
<CustomField>
    <fullName>Costs__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box if Manufacturing Costs are provided (as opposed to Sell Prices)</inlineHelpText>
    <label>Mfg Costs Provided</label>
    <type>Checkbox</type>
</CustomField>