force-app/main/default/objects/Estimate_Request__c/fields/CP_Magin_Estimation_2__c.field-meta.xml
<CustomField>
    <fullName>CP_Magin_Estimation_2__c</fullName>
    <formula>IF(Cost_2__c &gt;0,
(
(Sales_Price_Estimation_2__c  -  Cost_2__c -  Buried_Add_in__c )  / (Cost_2__c)
),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Margin Estimation 2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>