force-app/main/default/objects/Estimate_Request__c/fields/CP_Margin_Estimation1__c.field-meta.xml
<CustomField>
    <fullName>CP_Margin_Estimation1__c</fullName>
    <formula>IF(Cost_1__c &gt;0,
(
(Sales_Price_Estimation_1__c  -  Cost_1__c -   Buried_Add_On_Qty_1__c  )  / (Cost_1__c)
),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Margin Estimation1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>