force-app/main/default/objects/Estimate_Request__c/fields/CP_Margin_Estimation_3__c.field-meta.xml
<CustomField>
    <fullName>CP_Margin_Estimation_3__c</fullName>
    <formula>IF(Cost_3__c &gt;0,
(
(Sales_Price_Estimation_3__c  -  Cost_3__c -  Buried_Add_in__c )  / (Cost_3__c)
),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Margin Estimation 3</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>