force-app/main/default/objects/Estimate_Request__c/fields/CP_Margin_Estimation_4__c.field-meta.xml
<CustomField>
    <fullName>CP_Margin_Estimation_4__c</fullName>
    <formula>IF(Cost_4__c &gt;0,
(
(Sales_Price_Estimation_4__c  -  Cost_4__c -  Buried_Add_in__c )  / (Cost_4__c)
),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Margin Estimation 4</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>