force-app/main/default/objects/Estimate_Request__c/fields/CP_Margin_QTY1__c.field-meta.xml
<CustomField>
    <fullName>CP_Margin_QTY1__c</fullName>
    <formula>IF ( Margin_CP_All__c  = 0,  Cost_1__c  * Margin_Qty_1__c, Margin_CP_All__c  *  Cost_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Margin - QTY1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>