force-app/main/default/objects/Estimate_Request__c/fields/CP_Margin_QTY3__c.field-meta.xml
<CustomField>
    <fullName>CP_Margin_QTY3__c</fullName>
    <formula>IF ( Margin_CP_All__c  = 0,Cost_3__c  *  Margin_Qty_3__c, Margin_CP_All__c  *  Cost_3__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Margin - QTY3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>