force-app/main/default/objects/Estimate_Request__c/fields/CP_Sell_Price_QTY_1__c.field-meta.xml
<CustomField>
    <fullName>CP_Sell_Price_QTY_1__c</fullName>
    <formula>Cost_1__c   +   CP_Margin_QTY1__c + Buried_Add_in__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Sell Price - QTY 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>