force-app/main/default/objects/Estimate_Request__c/fields/CP_Sell_Price_QTY_2__c.field-meta.xml
<CustomField>
    <fullName>CP_Sell_Price_QTY_2__c</fullName>
    <formula>Cost_2__c  +  CP_Margin_QTY2__c +  Buried_Add_On_Qty_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Sell Price - QTY 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>