force-app/main/default/objects/Estimate_Request__c/fields/CP_Sell_Price_QTY_3__c.field-meta.xml
<CustomField>
    <fullName>CP_Sell_Price_QTY_3__c</fullName>
    <formula>Cost_3__c   +  CP_Margin_QTY3__c  +   Buried_Add_On_Qty_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Sell Price - QTY 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>