force-app/main/default/objects/Estimate_Request__c/fields/CSPIA__c.field-meta.xml
<CustomField>
    <fullName>CSPIA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are any products on this request designed or intended for children under 12?</inlineHelpText>
    <label>CSPIA</label>
    <type>Checkbox</type>
</CustomField>