force-app/main/default/objects/Estimate_Request__c/fields/Current_Previous_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Previous_Item_Number__c</fullName>
    <label>Current/Previous Item Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>