force-app/main/default/objects/Estimate_Request__c/fields/Customer_Samples__c.field-meta.xml
<CustomField>
    <fullName>Customer_Samples__c</fullName>
    <label>Customer Samples</label>
    <length>120</length>
    <type>Text</type>
</CustomField>