force-app/main/default/objects/Estimate_Request__c/fields/Cut_Height__c.field-meta.xml
<CustomField>
    <fullName>Cut_Height__c</fullName>
    <label>Cut Height</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>