force-app/main/default/objects/Estimate_Request__c/fields/Description_Changes__c.field-meta.xml
<CustomField>
    <fullName>Description_Changes__c</fullName>
    <label>Description Changes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>