force-app/main/default/objects/Estimate_Request__c/fields/Description_of_Special_Shape__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Special_Shape__c</fullName>
    <inlineHelpText>Enter a description of the shape if &quot;Special&quot; is selected</inlineHelpText>
    <label>Description of Special Shape</label>
    <length>20</length>
    <type>Text</type>
</CustomField>