force-app/main/default/objects/Estimate_Request__c/fields/Die_Cut__c.field-meta.xml
<CustomField>
    <fullName>Die_Cut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Die Cut</label>
    <type>Checkbox</type>
</CustomField>