force-app/main/default/objects/Estimate_Request__c/fields/Die_Tooling_Charge__c.field-meta.xml
<CustomField>
    <fullName>Die_Tooling_Charge__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the total amount for Die Tooling Charges</inlineHelpText>
    <label>Die Tooling Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>