force-app/main/default/objects/Estimate_Request__c/fields/Digital_File_Setup__c.field-meta.xml
<CustomField>
    <fullName>Digital_File_Setup__c</fullName>
    <label>Digital File Setup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VDP / Covers</fullName>
            </value>
            <value>
                <fullName>VDP / Text</fullName>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
            <value>
                <fullName>VDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>