force-app/main/default/objects/Estimate_Request__c/fields/Digital_Notes_4__c.field-meta.xml
<CustomField>
    <fullName>Digital_Notes_4__c</fullName>
    <label>Notes 4</label>
    <length>120</length>
    <type>Text</type>
</CustomField>