force-app/main/default/objects/Estimate_Request__c/fields/Digital_Notes__c.field-meta.xml
<CustomField>
    <fullName>Digital_Notes__c</fullName>
    <label>Notes</label>
    <length>120</length>
    <type>Text</type>
</CustomField>