force-app/main/default/objects/Estimate_Request__c/fields/Drop_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Date__c</fullName>
    <label>Drop Date</label>
    <type>Date</type>
</CustomField>